--- a/testlink/pom.xml
+++ b/testlink/pom.xml
@@ -16,6 +16,11 @@
 			<artifactId>selenium-java</artifactId>
 			<version>4.0.0-alpha-2</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.2.3</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
