--- a/testlink/pom.xml
+++ b/testlink/pom.xml
@@ -5,6 +5,12 @@
 	<groupId>testlink</groupId>
 	<artifactId>testlink</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<repositories>
+		<repository>
+			<id>jcenter</id>
+			<url>https://jcenter.bintray.com/</url>
+		</repository>
+	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>br.eti.kinoshita</groupId>
@@ -20,6 +26,21 @@
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
 			<version>2.2.3</version>
+		</dependency>
+		<dependency>
+			<groupId>io.github.prashant-ramcharan</groupId>
+			<artifactId>webdriver-binary-downloader</artifactId>
+			<version>1.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-scala-cats_2.12</artifactId>
+			<version>1.5.14</version>
+		</dependency>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-api-mockito2</artifactId>
+			<version>2.0.2</version>
 		</dependency>
 	</dependencies>
 	<build>
